# pytest-pgsnap

./: .tmuxp.yaml  AGENTS.md  CHANGES  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: AGENTS.md  conf.py  developing.md  index.md  manifest.json  quickstart.md
docs/_templates/sidebar/: projects.html
docs/pgsnap/: index.md  pytest.md
notes/: caching-techniques.md  notes-polished.md  notes.md
src/: pytest_pgsnap.py
src/pgsnap/: __about__.py  core.py
